add material add generate password service

--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -3,7 +3,13 @@
 <form #form="ngForm" (ngSubmit)="onSubmit(form)">
   <div>
     <label>Enter Length</label>
-    <input id="length" name="length" class="form-control" [(ngModel)]="generatePassword.length" required />
+    <input
+      id="length"
+      name="length"
+      class="form-control"
+      [(ngModel)]="generatePassword.length"
+      required
+    />
   </div>
 
   <div>
@@ -38,9 +44,12 @@
       [(ngModel)]="generatePassword.useSymbols"
     />
   </div>
+  <div>
+    {{ errorMessage }}
+  </div>
 
   <div>
-    <button>Generate!</button>
+    <button mat-raised-button color="primary">Generate!</button>
   </div>
 </form>
 
