- material icons, checkbox - validate only numbers with directive - add form validations

--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,4 +1,4 @@
-<h2>Password Generator</h2>
+<h2><mat-icon>star</mat-icon> Password Generator</h2>
 
 <form #form="ngForm" (ngSubmit)="onSubmit(form)">
   <div>
@@ -9,40 +9,66 @@
       class="form-control"
       [(ngModel)]="generatePassword.length"
       required
+      AllowNumbersOnly
     />
+    {{ errorLength }}
   </div>
 
   <div>
-    <label>Use Letters</label>
-    <input
+    <!-- <label>Use Letters</label> -->
+    <!-- <input
       type="checkbox"
       id="useLetters"
       name="useLetters"
       class="form-control"
       [(ngModel)]="generatePassword.useLetters"
-    />
+    /> -->
+    <p>
+      <mat-checkbox
+        id="useLetters"
+        name="useLetters"
+        [(ngModel)]="generatePassword.useLetters"
+        >Use Letters</mat-checkbox
+      >
+    </p>
   </div>
 
   <div>
-    <label>Use Numbers</label>
+    <!-- <label>Use Numbers</label>
     <input
       type="checkbox"
       id="useNumbers"
       name="useNumbers"
       class="form-control"
       [(ngModel)]="generatePassword.useNumbers"
-    />
+    /> -->
+    <p>
+      <mat-checkbox
+        id="useNumbers"
+        name="useNumbers"
+        [(ngModel)]="generatePassword.useNumbers"
+        >Use Numbers</mat-checkbox
+      >
+    </p>
   </div>
 
   <div>
-    <label>Use Symbols</label>
+    <!-- <label>Use Symbols</label>
     <input
       type="checkbox"
       id="useSymbols"
       name="useSymbols"
       class="form-control"
       [(ngModel)]="generatePassword.useSymbols"
-    />
+    /> -->
+    <p>
+      <mat-checkbox
+        id="useSymbols"
+        name="useSymbols"
+        [(ngModel)]="generatePassword.useSymbols"
+        >Use Symbols</mat-checkbox
+      >
+    </p>
   </div>
   <div>
     {{ errorMessage }}
