--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -1,85 +1,104 @@
 <h2><mat-icon>star</mat-icon> Password Generator</h2>
 
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
-  <div>
-    <label>Enter Length</label>
-    <input
-      id="length"
-      name="length"
-      class="form-control"
-      [(ngModel)]="generatePassword.length"
-      required
-      AllowNumbersOnly
-    />
-    {{ errorLength }}
-  </div>
+<mat-card>
+  <mat-card-content>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+      <div>
+        <!-- <label>Enter Length</label>
+        <input
+          id="length"
+          name="length"
+          class="form-control"
+          [(ngModel)]="generatePassword.length"
+          required
+          AllowNumbersOnly
+        /> -->
+        <mat-form-field>
+          <mat-label>Enter Length</mat-label>
+          <input
+            matInput
+            id="length"
+            name="length"
+            class="form-control"
+            [(ngModel)]="generatePassword.length"
+            required
+            AllowNumbersOnly
+          />
+        </mat-form-field>
 
-  <div>
-    <!-- <label>Use Letters</label> -->
-    <!-- <input
-      type="checkbox"
-      id="useLetters"
-      name="useLetters"
-      class="form-control"
-      [(ngModel)]="generatePassword.useLetters"
-    /> -->
-    <p>
-      <mat-checkbox
-        id="useLetters"
-        name="useLetters"
-        [(ngModel)]="generatePassword.useLetters"
-        >Use Letters</mat-checkbox
-      >
-    </p>
-  </div>
+        {{ errorLength }}
+      </div>
 
-  <div>
-    <!-- <label>Use Numbers</label>
-    <input
-      type="checkbox"
-      id="useNumbers"
-      name="useNumbers"
-      class="form-control"
-      [(ngModel)]="generatePassword.useNumbers"
-    /> -->
-    <p>
-      <mat-checkbox
-        id="useNumbers"
-        name="useNumbers"
-        [(ngModel)]="generatePassword.useNumbers"
-        >Use Numbers</mat-checkbox
-      >
-    </p>
-  </div>
+      <div>
+        <!-- <label>Use Letters</label> -->
+        <!-- <input
+          type="checkbox"
+          id="useLetters"
+          name="useLetters"
+          class="form-control"
+          [(ngModel)]="generatePassword.useLetters"
+        /> -->
+        <p>
+          <mat-checkbox
+            id="useLetters"
+            name="useLetters"
+            [(ngModel)]="generatePassword.useLetters"
+            >Use Letters</mat-checkbox
+          >
+        </p>
+      </div>
 
-  <div>
-    <!-- <label>Use Symbols</label>
-    <input
-      type="checkbox"
-      id="useSymbols"
-      name="useSymbols"
-      class="form-control"
-      [(ngModel)]="generatePassword.useSymbols"
-    /> -->
-    <p>
-      <mat-checkbox
-        id="useSymbols"
-        name="useSymbols"
-        [(ngModel)]="generatePassword.useSymbols"
-        >Use Symbols</mat-checkbox
-      >
-    </p>
-  </div>
-  <div>
-    {{ errorMessage }}
-  </div>
+      <div>
+        <!-- <label>Use Numbers</label>
+        <input
+          type="checkbox"
+          id="useNumbers"
+          name="useNumbers"
+          class="form-control"
+          [(ngModel)]="generatePassword.useNumbers"
+        /> -->
+        <p>
+          <mat-checkbox
+            id="useNumbers"
+            name="useNumbers"
+            [(ngModel)]="generatePassword.useNumbers"
+            >Use Numbers</mat-checkbox
+          >
+        </p>
+      </div>
 
-  <div>
-    <button mat-raised-button color="primary">Generate!</button>
-  </div>
-</form>
+      <div>
+        <!-- <label>Use Symbols</label>
+        <input
+          type="checkbox"
+          id="useSymbols"
+          name="useSymbols"
+          class="form-control"
+          [(ngModel)]="generatePassword.useSymbols"
+        /> -->
+        <p>
+          <mat-checkbox
+            id="useSymbols"
+            name="useSymbols"
+            [(ngModel)]="generatePassword.useSymbols"
+            >Use Symbols</mat-checkbox
+          >
+        </p>
+      </div>
+      <div>
+        {{ errorMessage }}
+      </div>
 
-<div>
-  <label>Your Password: </label>
-  {{ generatePassword.password }}
-</div>
+      <div>
+        <button mat-raised-button color="primary">Generate!</button>
+      </div>
+    </form>
+  </mat-card-content>
+</mat-card>
+
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>Your Password:</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>{{ generatePassword.password }}</mat-card-content>
+</mat-card>
