--- a/src/app/password-generator/password-generator.component.html
+++ b/src/app/password-generator/password-generator.component.html
@@ -26,7 +26,10 @@
           />
         </mat-form-field>
 
-        {{ errorLength }}
+        <div *ngIf="this.errorLength.length > 0" class="error-message">
+          {{ errorLength }}
+        </div>
+        
       </div>
 
       <div>
@@ -85,12 +88,12 @@
           >
         </p>
       </div>
-      <div>
+      <div *ngIf="this.errorMessage.length > 0" class="error-message">
         {{ errorMessage }}
       </div>
 
       <div>
-        <button mat-raised-button color="primary">Generate!</button>
+        <button mat-raised-button color="primary" [disabled]="!validateForm() ? true : false" >Generate!</button>
       </div>
     </form>
   </mat-card-content>
