--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 //Root
 @import 'shared/scss/root/variables';
+@import 'shared/scss/root/messages';
 
 //Layout
 @import 'shared/scss/layout/layout';
